<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="profile_picture">Profile picture</string>
    <string name="sign_out">Sign out</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountain</string>
    <string name="price_eur">Price(EUR)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dd_mm_yyy">DD/MM/YYY</string>
    <string name="rating">Rating</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="take">Take</string>
    <string name="hello_blank_fragment">T by BKL is a Travel Journal capable to retain online and offline information about your trips. This application was developed by Ciprian Brebu. </string>
    <string name="view_travel_image">View travel image</string>
    <string name="view_travel_favourite_image">View travel favourite image</string>
    <string name="message_rfc822">message/rfc822</string>
    <string name="developer_mail_address">brebu.ciprian@gmail.com</string>
    <string name="message_from">Message from:\u0020</string>
    <string name="contact_application_developer">Contact application developer</string>
    <string name="no_mail_client_installed">There are no email clients installed.</string>
    <string name="cv_link">https://traveljournalfinalproject.page.link/cv</string>
    <string name="jpg_ext">.jpg</string>
    <string name="logo_sign_in">Logo sign in</string>
    <string name="about_us_logo">about us logo</string>
    <string name="empty">Empty :(</string>
    <string name="date_up">Date ▲</string>
    <string name="date_down">Date ▼</string>
    <string name="price_up">Price ▲</string>
    <string name="price_down">Price ▼</string>
    <string name="rating_up">Rating ▲</string>
    <string name="rating_down">Rating ▼</string>
    <string name="welcome">Welcome</string>
    <string name="image_expanded">image expanded</string>
    <string name="travel_image_description">travel image description</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="find_cv">Find CV</string>
</resources>
