<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/contact" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/find_cv"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/find_cv" />
        </menu>
    </item>

</menu>
