<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".AddOrModifyTrip">

        <TextView
            android:id="@+id/textView_cameraPhotoTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/take_picture"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView_endDateTrip"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/textView_galleryPhotoTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gallery_photo"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/textView_ratingTrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rating"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_startDateTrip" />

        <TextView
            android:id="@+id/textView_endDateTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/end_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_endDateTrip"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_priceTrip" />

        <TextView
            android:id="@+id/textView_startDateTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_priceTrip" />

        <TextView
            android:id="@+id/textView_priceTrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price_eur"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView_typeTrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trip_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_tripDestination" />

        <EditText
            android:id="@+id/editText_tripName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_info_details"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_titleTrip" />

        <TextView
            android:id="@+id/textView_titleTrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_tripDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_destinationTrip" />

        <TextView
            android:id="@+id/textView_destinationTrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/destination"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_tripName" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_typeTrip">

            <RadioButton
                android:id="@+id/radioButton_cityBreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/city_break" />

            <RadioButton
                android:id="@+id/radioButton_seaSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sea_side" />

            <RadioButton
                android:id="@+id/radioButton_mountains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mountains" />
        </RadioGroup>

        <SeekBar
            android:id="@+id/seekBar_priceTrip"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:max="10000"
            android:progress="500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_priceTrip" />

        <Button
            android:id="@+id/button_startDateTrip"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:gravity="center|start"
            android:hint="@string/dd_mm_yyy"
            android:onClick="onClickStartDate"
            android:textColorHint="@color/color_white"
            app:layout_constraintEnd_toStartOf="@+id/button_endDateTrip"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_startDateTrip" />

        <Button
            android:id="@+id/button_endDateTrip"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:gravity="center|start"
            android:hint="@string/dd_mm_yyy"
            android:onClick="onClickEndDate"
            android:textColorHint="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_startDateTrip"
            app:layout_constraintTop_toBottomOf="@+id/textView_endDateTrip" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:progressTint="@color/colorPrimary"
            android:rating="3.5"
            android:secondaryProgressTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ratingTrip" />

        <Button
            android:id="@+id/button_selectGalleryPicture"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_gallery"
            android:onClick="onClickSelectPhoto"
            android:text="@string/select"
            app:layout_constraintStart_toStartOf="@+id/textView_galleryPhotoTrip"
            app:layout_constraintTop_toBottomOf="@+id/textView_galleryPhotoTrip" />

        <Button
            android:id="@+id/button_selectCameraPicture"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:onClick="onClickTakePhoto"
            android:text="@string/take"
            app:layout_constraintStart_toStartOf="@+id/textView_cameraPhotoTrip"
            app:layout_constraintTop_toBottomOf="@+id/textView_cameraPhotoTrip" />

        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="onClickSaveButton"
            android:text="@string/save"
            android:textColor="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_selectGalleryPicture" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>