<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ctx"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ViewTripFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardElevation="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="@+id/expanded_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_ViewTravelImage"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/view_travel_image"
                android:cropToPadding="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/textView_ViewTravelName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_ViewTravelFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:contentDescription="@string/view_travel_favourite_image"
                android:src="@drawable/ic_bookmark_full"
                app:layout_constraintEnd_toEndOf="@+id/imageView_ViewTravelImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_ViewTravelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@color/transparent_black"
                android:elevation="@dimen/dp_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/color_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_ViewTravelDestination"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:background="@color/transparent_black"
                android:paddingLeft="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView_ViewTravelName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RatingBar
                android:id="@+id/ratingBar_ViewTripRating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:elevation="@dimen/dp_10"
                android:numStars="5"
                android:progressBackgroundTint="@color/color_white"
                android:rating="3.5"
                android:stepSize="0.5"
                app:layout_constraintBottom_toTopOf="@+id/textView_ViewTravelName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_ViewTravelDestination" />

            <TextView
                android:id="@+id/textView_ViewTravelName"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:paddingLeft="@dimen/dp_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintBottom_toTopOf="@+id/textView_ViewTravelStartDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView_ViewTravelStartDate"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:padding="@dimen/dp_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:visibility="invisible"
        android:contentDescription="@string/travel_image_description" />

</android.support.constraint.ConstraintLayout>